@@ -1,2 +1,2 @@
 async def foo():
-    async def foo(): await something()
+    await
